engine/crates/validation/tests/validation_errors/interfaces_nonempty.errors.txt
  × Syntax error:  --> 2:1
  │   |
  │ 2 | }
  │   | ^---
  │   |
  │   = expected field_definition
